--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <script src="https://kit.fontawesome.com/a4179d2235.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -15,6 +16,9 @@
     <p class="alert"><%= alert %></p>
     <%= render "shared/flashes" %>
     <%= render "shared/navbar" %>
+
     <%= yield %>
+    <%= render "shared/footer" %>
+
   </body>
 </html>
