--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="forgot-password-container">
+  <div class="forgot-password-card">
+    <h2 class="text-center mb-4">Forgot Your Password?</h2>
+    <p class="text-center mb-4">Enter your email address and we'll send you a link to reset your password.</p>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+    <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name)) do |f| %>
+      <div class="form-inputs mb-3">
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true,
+                    input_html: { class: "form-control", autocomplete: "email" } %>
+      </div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
+      <div class="form-actions">
+        <%= f.button :submit, "Send Reset Instructions", class: "btn btn-primary w-100" %>
+      </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
