--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: #CA3C25;
+  background: white;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -9,17 +9,4 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
-}
-
-.nav-item {
-  &:hover{
-    background-color: #D64045;
-    font-size: larger;
-    transition: background-color 0.3s ease;
-    border-radius: 20px;
-  }
-}
-
-.nav-link {
-  color: white;
 }
