--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,15 @@
     <%= javascript_importmap_tags %>
     <script src="https://kit.fontawesome.com/a4179d2235.js" crossorigin="anonymous"></script>
   </head>
-
   <body>
+    <%= render "shared/navbar" %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= render "shared/flashes" %>
     <%= render "shared/navbar" %>
-
+    
     <%= yield %>
+    
     <%= render "shared/footer" %>
 
   </body>
