Carousel and Footer redone

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -17,7 +17,7 @@
       </div>
       <div class="col-3">
         <h3>CONTACT</h3>
-        <p>123, XYZ Straße, PLZ 3<br>München, DE</p>
+        <p>123, XYZ Straße, PLZ<br>München, DE</p>
         <div class="social-icons">
           <i class="fa-brands fa-facebook"></i>
           <i class="fa-brands fa-twitter"></i>
