--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,67 +1,94 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family: 'sans-serif';
+  font-family: 'Arial', sans-serif;
   box-sizing: border-box;
 }
 
-.footer{
+.footer {
   margin-top: 150px;
   width: 100%;
-  padding: 100px 15%;
-  background: #333;
-  color: #efefef;
+  padding: 60px 10%;
+  background: #2c2c2c;
+  color: #fff;
   display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.footer div{
-  text-align: center;
+.footer div {
+  text-align: left;
+  margin-bottom: 20px;
 }
 
-.col-2{
-  flex-grow: 2;
+.footer div h3 {
+  font-weight: 500;
+  margin-bottom: 20px;
+  width: 200px;
+  letter-spacing: 0.5px;
+  font-size: 1.2em;
+  display: inline-block;
+  color: #f5a623;
 }
 
-.footer div h3{
-  font-weight: 300;
-  margin-bottom: 30px;
-  letter-spacing: 1px;
-}
-
-.col-1 a{
+.col-1 a {
   display: block;
   text-decoration: none;
-  color: #efefef;
+  color: #bbb;
   margin-bottom: 10px;
+  transition: color 0.3s ease;
 }
 
-form input{
-  width: 400px;
+.col-1 a:hover {
+  color: #f5a623;
+}
+
+form input {
+  width: 100%;
+  max-width: 400px;
   height: 45px;
   border-radius: 4px;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 40px;
+  padding: 0 15px;
+  margin-top: 10px;
+  margin-bottom: 20px;
   outline: none;
-  border: none;
+  border: 1px solid #444;
+  background-color: #555;
+  color: #fff;
+  font-size: 0.9em;
+  transition: border-color 0.3s ease;
 }
 
-form button{
-  background: transparent;
-  border: 2px solid #fff;
+form input:focus {
+  border-color: #f5a623;
+}
+
+form button {
+  background-color: #f5a623;
+  border: none;
   color: #fff;
   border-radius: 30px;
-  padding: 10px 30px;
-  font-size: 15px;
+  padding: 12px 40px;
+  font-size: 0.9em;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.social-icons{
-  margin-top: 30px;
+form button:hover {
+  background-color: #e59400;
 }
 
-.social-icons i{
-  font-size: 22px;
-  margin: 10px;
+.social-icons {
+  margin-top: 20px;
+}
+
+.social-icons i {
+  font-size: 24px;
+  margin: 0 15px;
   cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.social-icons i:hover {
+  color: #f5a623;
 }
