--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -1,11 +1,36 @@
 <div class="container">
-  <h1> Bicycle <%= @bike.id %></h1>
+  <h1>Bicycle <%= @bike.id %></h1>
+
   <div class="card-show-bike">
-    <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+    <div id="bikeCarousel<%= @bike.id %>" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <% if @bike.photos.attached? %>
+          <% @bike.photos.first(4).each_with_index do |photo, index| %>
+            <div class="carousel-item <%= 'active' if index == 0 %>">
+              <%= image_tag photo, alt: "Bike Photo", class: "d-block w-100", style: "height: 300px; object-fit: cover;" %>
+            </div>
+          <% end %>
+        <% else %>
+          <div class="carousel-item active">
+            <%= image_tag "https://via.placeholder.com/300x200.png?text=No+Image+Available", alt: "No Image", class: "d-block w-100", style: "height: 300px; object-fit: cover;" %>
+          </div>
+        <% end %>
+      </div>
+
+      <a class="carousel-control-prev" href="#bikeCarousel<%= @bike.id %>" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#bikeCarousel<%= @bike.id %>" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
+
   <div class="card-show-bike-infos">
     <div class="card-show-bike-infos-text">
-      <h2>That is the bike of user: <%= @bike.user.email %></h2>
+      <h2>This is the bike of user: <%= @bike.user.email %></h2>
       <p><%= @bike.description %></p>
     </div>
     <div>
