--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -7,12 +7,12 @@
         <% if @bike.photos.attached? %>
           <% @bike.photos.first(4).each_with_index do |photo, index| %>
             <div class="carousel-item <%= 'active' if index == 0 %>">
-              <%= image_tag photo, alt: "Bike Photo", class: "d-block w-100", style: "height: 300px; object-fit: cover;" %>
+              <%= image_tag photo, alt: "Bike Photo", class: "d-block w-100", style: "height: 500px; object-fit: contain;" %>
             </div>
           <% end %>
         <% else %>
           <div class="carousel-item active">
-            <%= image_tag "https://via.placeholder.com/300x200.png?text=No+Image+Available", alt: "No Image", class: "d-block w-100", style: "height: 300px; object-fit: cover;" %>
+            <%= image_tag "https://via.placeholder.com/300x200.png?text=No+Image+Available", alt: "No Image", class: "d-block w-100", style: "height: 500px; object-fit: cover;" %>
           </div>
         <% end %>
       </div>
