--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,38 +1,16 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <div class="d-flex">
-      <a class="navbar-brand" href="http://127.0.0.1:3000/">
-        <img src="https://images.vexels.com/media/users/3/235471/isolated/preview/d0921171fc1788ebbc76069583670ecc-competition-bicycle-side-silhouette.png" alt="Rental-Bike Logo">Rental-Bike
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Create offer</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">My offers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">My Bookings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">My offer</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent2">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/users/sign_in">
-            <i class="fa-solid fa-user"></i> Login/Signup
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
-
+<nav class="navbar">
+        <div class="navbar-left">
+          <i class="fa-solid fa-bicycle" style="color: #FFA500;"></i>
+            <span class="brand-name">Rent-A-Bike</span>
+        </div>
+        <div class="navbar-center">
+            <a href="#" class="btn-menu">Home</a>
+            <a class="btn-menu" href="#">Create offer</a>
+            <a class="btn-menu" href="#">My Bookings</a>
+            <a class="btn-menu" href="#">My offer</a>
+        </div>
+        <div class="navbar-right">
+          <i class="fa-solid fa-user" style="color: #FFA500;"></i>
+            <a href="#" class="login-signup">Login/Signup</a>
+        </div>
+    </nav>
