--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,12 @@
 <div class="footer">
       <div class="col-1">
         <h3>USEFUL LINKS</h3>
-        <a href="#">About</a>
-        <a href="#">Services</a>
+        <a href="#">Home</a>
+        <a href="#">Create Offer</a>
+        <a href="#">My Bookings</a>
+        <a href="#">My offers</a>
         <a href="#">Contact</a>
-        <a href="#">Shop</a>
-        <a href="#">Blog</a>
+        <a href="#">Impressum</a>
       </div>
       <div class="col-2">
         <h3>NEWSLETTER</h3>
@@ -17,7 +18,7 @@
       </div>
       <div class="col-3">
         <h3>CONTACT</h3>
-        <p>123, XYZ Straße, PLZ<br>München, DE</p>
+        <p>Rent-A-Bike, XYZ Straße, PLZ<br>München, DE</p>
         <div class="social-icons">
           <i class="fa-brands fa-facebook"></i>
           <i class="fa-brands fa-twitter"></i>
