added link to home menu in navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,8 @@
             <span class="brand-name">Rent-A-Bike</span>
         </div>
         <div class="navbar-center">
-            <a href="#" class="btn-menu">Home</a>
+            <%# <a href="" class="btn-menu">Home</a> %>
+            <%= link_to "Home", root_path, class: "btn-menu" %>
             <a class="btn-menu" href="#">Create offer</a>
             <a class="btn-menu" href="#">My Bookings</a>
             <a class="btn-menu" href="#">My offer</a>
