--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,43 +1,51 @@
-<div class="card-deck">
-  <% @bikes.each do |bike| %>
-    <div class="card">
-      <div id="bikeCarousel<%= bike.id %>" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <% if bike.photos.attached? %>
-                <% bike.photos.first(4).each_with_index do |photo, index| %>
-                  <div class="carousel-item <%= 'active' if index == 0 %>">
-                    <%= image_tag photo, alt: "Bike Photo", class: "d-block w-100", style: "height: 300px; object-fit: cover;" %>
+<div class="d-flex">
+  <div class="col-8">
+    <div class="row">
+      <% @bikes.each_with_index do |bike, index| %>
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <div id="bikeCarousel<%= bike.id %>" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <% if bike.photos.attached? %>
+                  <% bike.photos.first(4).each_with_index do |photo, index| %>
+                    <div class="carousel-item <%= 'active' if index == 0 %>">
+                      <%= image_tag photo, alt: "Bike Photo", class: "d-block w-100", style: "height: 300px; object-fit: cover;" %>
+                    </div>
+                  <% end %>
+                <% else %>
+                  <div class="carousel-item active">
+                    <%= image_tag "https://via.placeholder.com/300x200.png?text=No+Image+Available", alt: "No Image", class: "d-block w-100", style: "height: 300px; object-fit: cover;" %>
                   </div>
                 <% end %>
-              <% else %>
-                <div class="carousel-item active">
-                  <%= image_tag "https://via.placeholder.com/300x200.png?text=No+Image+Available", alt: "No Image", class: "d-block w-100", style: "height: 300px; object-fit: cover;" %>
-                </div>
-              <% end %>
+              </div>
+              <a class="carousel-control-prev" href="#bikeCarousel<%= bike.id %>" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#bikeCarousel<%= bike.id %>" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
-            <a class="carousel-control-prev" href="#bikeCarousel<%= bike.id %>" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#bikeCarousel<%= bike.id %>" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+            <div class="card-body">
+              <p class="card-text"><%= bike.description %></p>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Preis pro Tag: <%= number_to_currency(bike.price) %></li>
+              </ul>
+              <div class="card-footer">
+                <%= link_to 'Details', bike_path(bike), class: 'btn btn-primary w-100' %>
+              </div>
+            </div>
           </div>
-      <div class="card-body">
-        <p class="card-text"><%= bike.description %></p>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Preis pro Tag: <%= number_to_currency(bike.price) %></li>
-        </ul>
-        <div class="card-footer">
-          <%= link_to 'Details', bike_path(bike), class: 'btn btn-primary w-100' %>
         </div>
-      </div>
+        <% if (index + 1) % 3 == 0 %>
+          </div><div class="row">
+        <% end %>
+      <% end %>
     </div>
-  <% end %>
-</div>
-<div style="width: 100%; height: 600px;"
-  data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
   </div>
+  <div class="col-4" style="width: 100%; height: 100vh; position: sticky; top: 0;"
+    data-controller="map"
+    data-map-markers-value="<%= @markers.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+</div>
