--- a/app/views/bikes/_info_window.html.erb
+++ b/app/views/bikes/_info_window.html.erb
@@ -1,3 +1,3 @@
-<h2><%= bike.description %></h2>
+<%= image_tag bike.photos.first, height: 80, width: 80, alt: "Logo" %>
+<h2 style="font-size: 14px;"><%= bike.description %></h2>
 <p><%= bike.address %></p>
-<%= image_tag bike.photos.first, height: 50, width: 60, alt: "Logo" %>
