--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,4 @@
-<h2>My New Bikes</h2>
+<h2>My Bikes out for rent</h2>
 <% if @bikes_with_new_bookings.present? %>
   <ul>
     <% @bikes_with_new_bookings.each do |bike| %>
