--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
         <div class="navbar-right">
           <i class="fa-solid fa-user" style="color: #FFA500;"></i>
             <% if user_signed_in? %>
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "login-signup" %>
+              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "login-signup" %>
             <% else %>
               <%= form_with url: destroy_user_session_path, method: :delete do %>
               <%= submit_tag "Logout", class: "btn-menu" %>
