fixes of all kind

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,35 @@
-<h2>Requests from others</h2>
+<div class="container mt-5">
+  <!-- Tab Navigation -->
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true"><button type="button" class="btn btn-primary position-relative">Requests from others
+        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+    <%= @open_requests.count %>
+    <span class="visually-hidden">unread messages</span>
+  </span>
+</button>
+</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false"><button type="button" class="btn btn-primary position-relative">My open requests for Bikes<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+    <%= @pending_bookings.count %>
+    <span class="visually-hidden">unread messages</span>
+  </span>
+</button></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false"><button type="button" class="btn btn-primary position-relative">My unrented Bikes<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+    <%= @bikes_with_new_bookings.count %>
+    <span class="visually-hidden">open bikes</span>
+  </span>
+</button></a>
+    </li>
+  </ul>
+
+  <!-- Tab Content -->
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+      <h3>Requests from others: <%= @open_requests.count %></h3>
 <% if @open_requests.present? %>
   <table class="table table-striped">
     <thead>
@@ -28,10 +59,10 @@
 <% else %>
   <p>No bikes with new bookings.</p>
 <% end %>
-
-
-<h2>My open requests for Bikes</h2>
-<table class="table">
+    </div>
+    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+      <h3>My open requests for Bikes</h3>
+      <table class="table">
   <thead>
     <tr>
       <th scope="col">Description</th>
@@ -56,11 +87,10 @@
 <% end %>
   </tbody>
 </table>
-
-
-
-<h2>My unrented Bikes</h2>
-<table class="table">
+    </div </div>
+    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+      <h3>My unrented Bikes</h3>
+      <table class="table">
   <thead>
     <tr>
       <th scope="col">Description</th>
@@ -83,3 +113,6 @@
 <% end %>
   </tbody>
 </table>
+    </div>
+  </div>
+</div>
