--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,8 +3,7 @@
         <h3>USEFUL LINKS</h3>
         <a href="#">Home</a>
         <a href="#">Create Offer</a>
-        <a href="#">My Bookings</a>
-        <a href="#">My offers</a>
+        <a href="#">Dashboard</a>
         <a href="#">Contact</a>
         <a href="#">Impressum</a>
       </div>
