--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -36,6 +36,8 @@
     <div>
         <% if @bike.bookings.where(status: 'pending').exists? %>
         <p>This bike has already been booked.</p>
+        <% elsif @bike.user == current_user%>
+          <p style="color: red;">You created this offer, so you cannot book it.</p>
       <% else %>
         <%= form_with url: book_bike_path(@bike), method: :post, local: true do %>
           <%= submit_tag "Book now for: #{number_to_currency(@bike.price)}€", class: "btn-booknow" %>
