--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,9 +15,7 @@
             <% if user_signed_in? %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "login-signup" %>
             <% else %>
-              <%= form_with url: destroy_user_session_path, method: :delete do %>
-              <%= submit_tag "Logout", class: "btn-menu" %>
-              <% end %>
+              <%= link_to "Sign in", new_user_session_path, data: {turbo_method: :get}, class: "login-signup" %>
             <% end %>
         </div>
     </nav>
