--- a/app/views/bikes/new.html.erb
+++ b/app/views/bikes/new.html.erb
@@ -3,7 +3,7 @@
     <div style="margin-bottom: 8rem;">
       <h1>Create your new Bike!</h1>
     </div>
-    <%= form_with(model: @bike, local: true) do |form| %>
+    <%= simple_form_for(@bike) do |form| %>
       <% if @bike.errors.any? %>
         <div id="error_explanation" class="alert alert-danger">
           <h2><%= pluralize(@bike.errors.count, "error") %> prohibited this bike from being saved:</h2>
@@ -26,8 +26,9 @@
       </div>
 
       <div class="form-group">
-        <p class="mb-0"><%= form.label :address %>:</p>
-        <%= form.text_field :address, id: 'address-input', data: { address_autocomplete_target: "address" }, class: "form-control" %>
+        <%= form.input  :address, class: "d-none", input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
+         wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+        %>
       </div>
 
       <div class="form-group">
