--- a/app/views/bikes/new.html.erb
+++ b/app/views/bikes/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center">
-  <div class="col-6">
-    <div style="margin-bottom: 8rem;">
+  <div class="col-4">
+    <div style="margin-bottom: 2rem; text-align: center;">
       <h1>Create your new Bike!</h1>
     </div>
     <%= simple_form_for(@bike) do |form| %>
@@ -16,24 +16,21 @@
       <% end %>
 
       <div class="form-group">
-        <p class="mb-0"><%= form.label :description %>:</p>
-        <%= form.text_area :description, class: "form-control", style: "height: 38px; width: 25rem;" %>
+        <%= form.input :description, class: "form-control", style: "height: 38px; width: 25rem;" %>
       </div>
 
       <div class="form-group">
-        <p class="mb-0"><%= form.label :price %>:</p>
-        <%= form.number_field :price, class: "form-control" %>
+        <%= form.input :price, class: "form-control" %>
       </div>
 
       <div class="form-group">
-        <%= form.input  :address, class: "d-none", input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
+        <%= form.input  :address, input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
          wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
         %>
       </div>
 
       <div class="form-group">
-        <p class="mb-0"><%= form.label :photos %></p>
-        <%= form.file_field :photos, multiple: true, direct_upload: true, class: "form-control" %>
+        <%= form.input :photos, multiple: true, direct_upload: true, class: "form-control" %>
       </div>
 
       <div class="actions">
