--- a/app/views/bikes/new.html.erb
+++ b/app/views/bikes/new.html.erb
@@ -20,17 +20,20 @@
       </div>
 
       <div class="form-group">
-        <%= form.input :price, class: "form-control" %>
+        <p class="mb-0"><%= form.label :price %></p>
+        <%= form.number_field :price, class: "form-control" %>
       </div>
 
       <div class="form-group">
+        <p class="mb-0 d-none"><%= form.label :address %>:</p>
         <%= form.input  :address, input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
          wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
         %>
       </div>
 
       <div class="form-group">
-        <%= form.input :photos, multiple: true, direct_upload: true, class: "form-control" %>
+        <p class="mb-0"><%= form.label :photos %></p>
+        <%= form.file_field :photos, multiple: true, direct_upload: true, class: "form-control" %>
       </div>
 
       <div class="actions">
