--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -86,3 +86,8 @@ body {
 .navbar-right i {
   font-size: 24px; /* Adjust size as needed */
 }
+
+.singed-in-user {
+  font-size: 14px;
+  padding-right: 15px;
+}
