--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,10 +11,12 @@
             <%# <%= link_to "My Offers", dashboard_offer_path(current_user), class: "btn-menu" %>
         </div>
         <div class="navbar-right">
-          <i class="fa-solid fa-user" style="color: #FFA500;"></i>
             <% if user_signed_in? %>
+            <p class="singed-in-user"><%= current_user.email %></p>
+            <i class="fa-solid fa-user" style="color: #FFA500;"></i>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "login-signup" %>
             <% else %>
+            <i class="fa-solid fa-user" style="color: #FFA500;"></i>
               <%= link_to "Sign in", new_user_session_path, data: {turbo_method: :get}, class: "login-signup" %>
             <% end %>
         </div>
