--- a/app/views/bikes/new.html.erb
+++ b/app/views/bikes/new.html.erb
@@ -16,6 +16,7 @@
       <% end %>
 
       <div class="form-group">
+      <p class="mb-0"><%= form.label :description %></p>
         <%= form.input :description, class: "form-control", style: "height: 38px; width: 25rem;" %>
       </div>
 
