--- a/app/views/bikes/new.html.erb
+++ b/app/views/bikes/new.html.erb
@@ -16,7 +16,7 @@
       <% end %>
 
       <div class="form-group">
-      <p class="mb-0"><%= form.label :description %></p>
+      <p class="mb-0 d-none"><%= form.label :description %></p>
         <%= form.input :description, class: "form-control", style: "height: 38px; width: 25rem;" %>
       </div>
 
@@ -26,10 +26,9 @@
       </div>
 
       <div class="form-group">
-        <p class="mb-0 d-none"><%= form.label :address %>:</p>
-        <%= form.input  :address, input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
-         wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
-        %>
+      <%= form.input  :address, class: "d-none", input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
+      wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+      %>
       </div>
 
       <div class="form-group">
