--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,7 +3,7 @@
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
       <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">
-        <button type="button" class="btn btn-primary position-relative">
+        <button type="button" class="btn btn-primary position-relative", style="background-color: #2c2c2c; color: #f5a623">
           Requests from others
           <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
             <%= @open_requests.count %>
@@ -14,7 +14,7 @@
     </li>
     <li class="nav-item">
       <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">
-        <button type="button" class="btn btn-primary position-relative">
+        <button type="button" class="btn btn-primary position-relative", style="background-color: #2c2c2c; color: #f5a623">
           My open requests for Bikes
           <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
             <%= @pending_bookings.count %>
@@ -25,7 +25,7 @@
     </li>
     <li class="nav-item">
       <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">
-        <button type="button" class="btn btn-primary position-relative">
+        <button type="button" class="btn btn-primary position-relative", style="background-color: #2c2c2c; color: #f5a623">
           My unrented Bikes
           <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
             <%= @bikes_with_new_bookings.count %>
@@ -37,7 +37,7 @@
     <!-- New History Tab -->
     <li class="nav-item">
       <a class="nav-link" id="history-tab" data-toggle="tab" href="#history" role="tab" aria-controls="history" aria-selected="false">
-        <button type="button" class="btn btn-primary position-relative">
+        <button type="button" class="btn btn-primary position-relative", style="background-color: #2c2c2c; color: #f5a623">
           History
           <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
             <%= @bikes_history.count %> <!-- You need to set this variable in the controller -->
@@ -130,9 +130,9 @@
                 <td><%= bike.address %></td>
                 <td>
                   <%= form_with url: bike_path(bike), method: :delete, local: true, remote: true do %>
-                    <%= submit_tag 'Delete', data: { confirm: 'Are you sure you want to delete this bike?' }, class: 'btn btn-danger' %>
+                    <%= submit_tag 'Delete', data: { confirm: 'Are you sure you want to delete this bike?' }, class: 'btn btn-danger w-100' %>
                   <% end %>
-                  <%= link_to 'Edit', edit_bike_path(bike), class: 'btn btn-warning' %>
+                  <%= link_to 'Edit', edit_bike_path(bike), class: 'btn btn-warning w-100' %>
                 </td>
               </tr>
             <% end %>
